@@ -4,6 +4,8 @@ Sandbox_EN = {
 	Sandbox_MoreTraits_PreparedMedicalBandageAmount_tooltip = "The amount of bandages given by the Prepare Medical trait.",
     Sandbox_MoreTraits_PreparedCarGasToggle = "Prepared: Cars Gas Can",
     Sandbox_MoreTraits_PreparedCarGasToggle_tooltip = "Players who choose the Prepared: Cars trait start with a gas can.",
+    Sandbox_MoreTraits_InjuredBurns = "Injured Burns",
+    Sandbox_MoreTraits_InjuredBurns_tooltip = "Whether or not players who take the Injured trait can receive burns as a random injury.<br>Burns can be extremely debilitating especially if on the legs.",
     Sandbox_MoreTraits_SpecializationXPPercent = "Specialization XP Reduction",
     Sandbox_MoreTraits_SpecializationXPPercent_tooltip = "The percent value that XP is reduced by for those who take a Specialization trait.<br>Set to 0% to disable XP reduction.",
     Sandbox_MoreTraits_LuckImpact = "Luck Impact",
