@@ -82,7 +82,7 @@ UI_EN = {
     UI_trait_gordanite = "Gordanite",
     UI_trait_gordanitedesc = "You are adept at using crowbars as weapons.<br>Your attacks with crowbars have a higher critical hit chance as well as increased base damage.<br>+1 Long Blunt<br>Effect scales with Long Blunt skill.",
     UI_trait_indefatigable = "Indefatigable",
-    UI_trait_indefatigabledesc = "You're one hard person to kill. Whenever you are reduced below 15% HP, you are healed to full HP.<br>This effect may only occur once per 7 days and does not cure wounds.",
+    UI_trait_indefatigabledesc = "You're one hard person to kill. Whenever you are reduced below 15% HP, you are healed to full HP.<br>This effect may only occur once per 7 days and does not cure zombification.",
     UI_trait_badteeth = "Bad Teeth",
     UI_trait_badteethdesc = "You never took much care of your dental health.<br>When consuming food, you may experience pain. Larger portions cause more pain.",
     UI_trait_hardy = "Hardy",
