@@ -10,11 +10,17 @@ option MoreTraits.PreparedCarGasToggle
 	type = boolean, default = true,
 	page = MoreTraits, translation = MoreTraits_PreparedCarGasToggle,
 }
+option MoreTraits.InjuredBurns
+{
+	type = boolean, default = true,
+	page = MoreTraits, translation = MoreTraits_InjuredBurns,
+}
 option MoreTraits.AlcoholicFreeDrink
 {
 	type = boolean, default = true,
 	page = MoreTraits, translation = MoreTraits_AlcoholicFreeDrink,
 }
+
 option MoreTraits.AlcoholicFrequency
 {
 	type = integer, min = 1, max = 720, default = 24,
